# stock-review

./: .gitignore  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  docs.html  pyproject.toml  start-dev.bat  start-dev.sh
bug/: market_cap_turnover.md
data/: stock_review.db-journal
scripts/: __init__.py  update_data.py
src/api/: app.py
src/api/routes/: config.py  data.py  llm.py  watchlist.py
src/cli/: main.py
src/configs/: settings.json.example
src/data/: __init__.py  baostock.py  cache.py  fetcher.py  models.py  storage.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1773804253738-deefa7d7b7735.mjs
web/src/: App.vue
web/src/api/: index.ts  stock.ts
web/src/components/: StockSearch.vue  WatchList.vue
web/src/components/Replay/: MultiReplayLayout.vue  ReplayChart.vue  ReplayControl.vue
web/src/router/: index.ts
web/src/stores/: stock.ts
web/src/utils/: stream.ts
web/src/views/: ReplayView.vue  ScreenView.vue  SettingsView.vue  TradingView.vue
